# deemian

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
docs/: conf.py  example.ipynb  index.md
docs/_static/: vps4-chmp6.webm
docs/information/: acknowledgement.md  roadmap.md
docs/introduction/: introduction.md  quicktour.md  whydeemian.md
docs/usage/: feature.md  gettingstarted.md  installation.md  references.md  tutorial.md
docs/usage/tutorial/: analyze_multimodel.md  analyze_omicron_multiselection.md  choose_presentation_format.md
src/deemian/: deemian.py
src/deemian/chem/: interaction_utility.py  interactions.py  reader.py  selection.py  utility.py
src/deemian/engine/: builder.py  director.py  grammar.lark  processor.py
src/deemian/writer/: bundle.py  readable.py
src/deemian/writer/templates/: 01_detailed_conf_first.txt  02_detailed_type_first.txt  (+5 more)
tests/: conftest.py  test_chem_interaction.py  test_chem_interaction_utility.py  test_chem_interactions.py  test_chem_reader.py  test_chem_selection.py  test_chem_utility.py  test_deemian.py  test_engine_builder.py  test_engine_director.py  test_engine_processor.py  test_writer_bundle.py  test_writer_readable.py
tests/data/: 01-7qxy-i1g.txt  2k3w.parquet.gzip  5nzn.parquet.gzip  7u0n.parquet.gzip  n1-oseltamivir-5nzn.txt  omicron-rbd-ace2-7u0n-multiselect.txt  oseltamivir.parquet.gzip  oseltamivir_corrected.parquet.gzip  results_g39_protein_A.parquet.gzip  results_internal_ace2.parquet.gzip  results_rbm_h31.parquet.gzip  results_vps4_chmp6.parquet.gzip  vps4-chmp6-2k3w.txt  vps4-chmp6-2kw3.txt
