[tool.poetry]
name = "deemian"
version = "0.1.0"
description = "A Domain Specific Language for Deep Molecular Interaction Analysis"
authors = ["Muhammad Radifar"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
lark = "^1.1.7"
click = "^8.1.7"
rdkit = "^2023.3.3"

[tool.poetry.group.dev.dependencies]
rich = "^13.6.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
