[tool.poetry]
name = "deemian"
version = "0.0.0"
description = "A Domain Specific Language for Deep Molecular Interaction Analysis"
authors = ["Muhammad Radifar"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.7"
rdkit = "^2023.3.3"
pandas = "^2.1.4"
pyarrow = "^14.0.1"
scipy = "^1.11.4"
jinja2 = "^3.1.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
rich = "^13.6.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
